# Felty-oi

./: Cargo.toml  Dioxus.toml  Dockerfile.cross-gtk  README.md
assets/: main.css
docs/: de.md  en.md  es.md
src/: assets.rs  main.rs  router.rs
src/components/: about.rs  home.rs  mod.rs  navbar.rs
